--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "gsap": "^3.12.7",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
